<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/list_item_magnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_magnitude" />
    <TextView
        android:id="@+id/magnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnitude" />

    <TextView
        android:id="@+id/list_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_location" />
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/list_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_date" />
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/list_item_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_url" />
    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url" />



</LinearLayout>